--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.0.1",
     "typescript": "^3.7.5"
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/redux-actions": "^2.6.1"
   }
 }
